--- a/_sass/layouts/pages/_misc.scss
+++ b/_sass/layouts/pages/_misc.scss
@@ -13,7 +13,9 @@ body.lineup {
 */
 
 .content-box {
-    height: 100%;
+    @media (min-width: 768px) {
+        height: 100%;
+    }
     
     p {
         a {
@@ -28,6 +30,8 @@ body.about,
 body.lineup,
 body.category-science {
     .content-box {
-        height: auto;
+        @media (min-width: 768px) {
+            height: auto;
+        }
     }
 }
